# cyphra-cli

./: .gitignore  CMakeLists.txt  README.md
apps/cli/: CMakeLists.txt  cli_command_spec.cpp  cli_command_spec.hpp  cli_commands.cpp  cli_commands.hpp  cli_debug_artifacts.cpp  cli_debug_artifacts.hpp  cli_dsl_ast.hpp  cli_dsl_lexer.cpp  cli_dsl_lexer.hpp  cli_dsl_lowering.cpp  cli_dsl_lowering.hpp  cli_dsl_parser.cpp  cli_dsl_parser.hpp  cli_dsl_runtime.cpp  cli_dsl_runtime.hpp  cli_dsl_semantic.cpp  cli_dsl_semantic.hpp  cli_ir.cpp  cli_ir.hpp  cli_ir_validation.cpp  cli_ir_validation.hpp  cli_parse.cpp  cli_parse.hpp  cli_print.cpp  cli_print.hpp  cli_types.hpp  main.cpp
apps/tui/: package-lock.json  package.json  tsconfig.json
apps/tui/src/: App.tsx
apps/tui/src/components/: CommandInput.tsx  OutputLog.tsx
apps/tui/src/lib/: runRse.ts
docs/: cli.md  corpus_eval.md  dsl.md  getting-started.md
examples/: batch_info.rsx  classic_roundtrip.rsx  mosaic_debug.rsx
tests/fixtures/: message.txt
tests/fixtures/edge_cases/classic_crc_mismatch/: README.md
tests/regression/: cli_command_spec_test.cpp  cli_ir_validation_test.cpp  cli_json_test.cpp  cli_roundtrip_test.cpp  corpus_eval_smoke_test.py  corpus_sqlite_smoke_test.py  dsl_lowering_test.cpp  dsl_parser_test.cpp  dsl_runtime_test.cpp  dsl_semantic_test.cpp  haar_v1_smoke.cpp  mosaic_helpers_smoke.cpp  mosaic_support_probe_smoke_test.py  mosaic_v2_cli_smoke.cpp  prng_bgra_smoke.cpp
tools/: corpus_eval.py  download_dataset.py  mosaic_support_probe.py
tools/corpus/: __init__.py  evaluation_support.py  sqlite_export.py
